# fortnite-replay

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  debug_build.sh  fortnite_replay.ksy
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cmake/: byteswap.h  windows_compat.h
docs/: API.md  SETUP.md
examples/: CMakeLists.txt  README.md  example_main.cpp
include/fortnite_replay/: checkpoint_chunk.hpp  chunk.hpp  chunk_type.hpp  crypto.hpp  data_chunk.hpp  elimination.hpp  event.hpp  event_chunk.hpp  event_parser.hpp  header_chunk.hpp  parser.hpp  replay.hpp  utils.hpp
include/fortnite_replay/stores/: checkpoint_store.hpp  data_store.hpp  event_store.hpp  header_store.hpp
src/: CMakeLists.txt  crypto.cpp  event_parser.cpp  parser.cpp  replay.cpp
src/stores/: checkpoint_store.cpp  data_store.cpp  event_store.cpp  header_store.cpp
tests/: CMakeLists.txt  test_crypto.cpp  test_parser.cpp  test_replay.cpp  test_utils.cpp
